# ezfastq

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ezfastq/: api.py  cli.py  copier.py  fastq.py  namemap.py
ezfastq/tests/: test_cli.py  test_copier.py  test_fastq.py  test_namemap.py
ezfastq/tests/data/nested/test3/: test3-reads-r1.fastq
fq/: __init__.py  api.py  cli.py  copier.py  fastq.py  map.py  pair.py  scanner.py
fq/tests/: __init__.py  test_cli.py  test_copier.py  test_fastq.py  test_map.py
fq/tests/data/flat/: test3-reads-r1.fastq  test3-reads-r2.fastq
fq/tests/data/nested/test3/: test3-reads-r2.fastq
