[project]
name = "fq"
version = "0.1"
description = "Scan directories for FASTQ files and associate with sample names"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black==25.1",
    "pytest",
    "pytest-cov",
]

[project.scripts]
fq = "fq.cli:main"
